--- a/people.htm
+++ b/people.htm
@@ -96,6 +96,27 @@ ul.topnav li.icon {display: none;}
   background-color: #e0e0e0;
   color: #002F6C;
 }
+
+.collapsible {
+  background-color: #fff;
+  color: #002F6C;
+  cursor: pointer;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 16px;
+}
+
+.collapsible:hover {
+  background-color: #fff;
+}
+
+.content {
+  padding: 0 12px;
+  display: none;
+  overflow: hidden;
+}
 </style>
 <title>Chongzhi Zang Lab</title>
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
@@ -199,7 +220,7 @@ Dr. Chongzhi Zang is an Associate Professor in the Center for Public Health Geno
 <b>Zhenjia Wang, PhD</b>
 <a href="mailto:zhenjia@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a> <a href="https://scholar.google.com/citations?user=-mxk13sAAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-Zhenjia joined the lab as a postdoctoral research associate in January 2017 and have been a research scientist since June 2021. She received her PhD in bioinformatics from School of Mathematics, Shandong University in China. She is working on integration of publicly available transcription factor ChIP-seq data for studying functional gene regulation, and integration of RNA-seq data with ChIP-seq data for studying epigenetic mechanisms of cancer.
+Zhenjia joined the lab as a postdoctoral research associate in January 2017 and has been a research scientist since June 2021. She received her PhD in bioinformatics from School of Mathematics, Shandong University in China. She is working on integration of publicly available transcription factor ChIP-seq data for studying functional gene regulation, and integration of RNA-seq data with ChIP-seq data for studying epigenetic mechanisms of cancer.
 </p><br><br>
 <p style="line-height: 1.6;">
 <img align="right" src="images/shengen_hu.jpg" style="width:180px">
@@ -217,13 +238,13 @@ Dr. Sheng'en Shawn Hu is a research scientist after postdoctoral training in the
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Qingying Chen joined the lab as a postdoctoral research associate in January 2021. She received her PhD in physics from the University of Tulsa and her B.S. in Applied Physics from Xi’an Jiaotong University in China. Her research focused on designing, simulating, and testing the interference filters for the phonic sensing, and developing coating techniques to functionalize the integrated sensing elements. She is interested in computational biology and excited to gain experience in bioinformatics research.
 </p><br><br>
-<p style="line-height: 1.6;">
+<!--<p style="line-height: 1.6;">
 <img align="right" src="images/billy_lamberti.jpg" style="height:180px">
 <a href="https://www.billyflamberti.com" target="_blank"><b>William F. Lamberti, PhD</b></a>
 <a href="mailto:william.f.lamberti@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a> <a href="https://scholar.google.com/citations?user=nqqk3EgAAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 William Franz Lamberti received his B.A. in Mathematical Statistics from The College of New Jersey in 2015 and his M.S. in Statistical Science from George Mason University in 2017.  Before joining UVA in January 2021, he received his PhD in Computational Sciences and Informatics with a specialization in Data Science from George Mason University where he was a Presidential Scholar.  His current research interests include image processing applications, shape analysis, and statistical and machine learning classification problems. He is planning on incorporating skills in explainable machine learning and imaging to spatial genomics problems.
-</p><br><br>
+</p><br><br>-->
 <p style="line-height: 1.6;">
 <img align="right" src="images/shengyuan_wang.jpg" style="width:180px">
 <b>Shengyuan Wang, PhD</b>
@@ -245,16 +266,16 @@ Mengxue Tian is a PhD student in the Biomedical Sciences (BIMS) program. Before 
 <b>Hongpan Zhang</b>
 <a href="mailto:hz9fq@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-Hongpan Zhang is a PhD student in the Biomedical Sciences (BIMS) program. Before joining the lab in 2019, he obtained two bachelor's degrees in life sciences and software engineering from Sichuan University. Hongpan is keen to study the connection between genomic phenomena and diseases. He hopes to raise his knowledge of biological issues in his research work. Hongpan is a basketball fan and also loves other sports events. He is interested in historical knowledge as well.
+Hongpan Zhang is a PhD student in the Biomedical Sciences (BIMS) program. Before joining the lab in 2019, he obtained two bachelor's degrees in life sciences and software engineering from Sichuan University in China. Hongpan is keen to study the connection between genomic phenomena and diseases. He hopes to raise his knowledge of biological issues in his research work. Hongpan is a basketball fan and also loves other sports events. He is interested in historical knowledge as well.
 </p><br><br>
 <p style="line-height: 1.6;">
 <img align="right" src="images/zhaoxia_ma.jpg" style="width:180px">
 <b>Zhaoxia Ma</b>
 <a href="mailto:prm2zt@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-Zhaoxia Ma is a PhD student in the Biomedical Sciences (BIMS) program. She received her M.S. in Operational Research and Computational Systems Biology from Academy of Mathematics and Systems Science, Chinese Academy of Sciences, and B.S. in Mathematics and Applied Mathematics (Honors Science Program) from Xi’an Jiaotong University. She is interested in developing computational models and utilizing computational methods to analyze genomics and epigenomics data. She enjoys listening to music and playing badminton.
+Zhaoxia Ma is a PhD student in the Biomedical Sciences (BIMS) program. She received her M.S. in Operational Research and Computational Systems Biology from Academy of Mathematics and Systems Science, Chinese Academy of Sciences, and B.S. in Mathematics and Applied Mathematics (Honors Science Program) from Xi’an Jiaotong University in China. She is interested in developing computational models and utilizing computational methods to analyze genomics and epigenomics data. She enjoys listening to music and playing badminton.
 </p><br><br>
-<hr>
+<!--<hr>
 <h3><font color="#002F6C">Research Assistants</font></h3>
 <p style="line-height: 1.6;">
 <img align="right" src="images/megan_grieco.jpg" style="width:180px">
@@ -270,7 +291,7 @@ Megan Grieco graduated from UVA in 2021 majored in Systems Engineering and works
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Drew Vanichkachorn is a graduate student in the Master of Public Health (MPH) program. He joined the lab in 2019 as a 3rd Year undergraduate student majoring in Global Public Health. Drew is excited to be learning about genomics and believes this field to be important in the future of medicine. He is also interested in music and enjoys playing the piano and viola when he can.
 </p><br><br>
-<!--<p style="line-height: 1.6;">
+<p style="line-height: 1.6;">
 <img align="right" src="images/ben_ke.jpg" style="width:180px">
 <b>Benjamin Ke</b>
 <a href="mailto:bgk5ck@virginia.edu "><img src="images/emailicon.jpg" style="width:20px"></a><br>
@@ -286,13 +307,6 @@ Ben Ke graduated from UVA in 2022 majored in Biostatistics and will matriculate 
 <a href="mailto:ean4tp@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Emilie Neulen is a Biology major with a possible minor in German on the pre-med track (Class of 2022). She is extremely excited to learn more about using programming in Biology and hope to apply some of the skills she will be learning to future research. After graduating, she is planning on attending medical school. In her free time, she enjoys running, playing the violin, cooking, and volunteering at the Charlottesville SPCA.
-</p><br><br>
-<p style="line-height: 1.6;">
-<img align="right" src="images/kuki_davey.jpg" style="width:180px">
-<b>Kuki Davey</b>
-<a href="mailto:kkd7tu@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Kuki Davey is an undergraduate student (class of 2022) from Jacksonville, Florida, majoring in Biology with a minor in Spanish. She is pursuing research opportunities because she is interested in learning about how computer science and biology intersect and are used to further advance the medical field. She hopes to attend medical school in the future. During her free time, she enjoys volunteering, traveling, and reading.
 </p><br><br>
 <h4><font color="#002F6C">Class of 2024</font></h4>
 <p style="line-height: 1.6;">
@@ -320,9 +334,7 @@ Ivory Tang (Class of 2025) plans to major in math and follow a pre-med track. Sh
 Sonnet is a current student at Troy High School (class of 2023) in Michigan interested in computational biology and computer science. She looks forward to learning more about gene expression and the epigenetic mechanisms of cancer. In her free time, she likes to hike outside and travel.
 </p><br><br><br>-->
 <p style="line-height: 1.6;">
-<img align="right" src="images/katherine_zhang.jpg" style="width:180px">
 <b>Katherine Zhang</b>
-<!--<a href="mailto:duf7xd@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a>--><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Katherine is currently a student at Thomas Jefferson High School for Science and Technology (class of 2024) in Virginia. She is excited to learn about the applications of computer science in the field of biology and hopes to eventually pursue study in the medical field. In her spare time, she enjoys reading, taking walks with her dog, and volunteer tutoring.
 </p><br><br>
@@ -337,7 +349,7 @@ UVA Advance 2022 Summer Student, from Rockbridge County High School, Lexington, 
 UVA Advance 2022 Summer Student, from Mclean High School, Mclean, VA
 </p><br>
 <p style="line-height: 1.6;">
-<b>Peter Stewart</b>
+<b>Chris Stewart</b>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, VA
 </p><br><br>
@@ -362,6 +374,12 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 		<td>MD, University of Michigan;<br>General Surgery Residency, University of Virginia</td>
 		<td>07/2019&ndash;05/2021</td>
 		<td>Pathology Fellow, National Cancer Institute, NIH</td>
+	</tr>
+	<tr>
+		<td><b>William F. Lamberti, PhD</b></td>
+		<td>PhD in Computational Sciences and Informatics, George Mason University</td>
+		<td>01/2021&ndash;08/2022</td>
+		<td>Data Scientist, Google</td>
 	</tr>
 </table>
 <br>
@@ -459,12 +477,12 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 		<td>09/2017&ndash;05/2020</td>
 		<td>MS Student in Data Science, UVA</td>
 	</tr>
-	<!--<tr>
+	<tr>
 		<td><b>Megan Grieco</b></td>
 		<td>Systems and Information Engineering</td>
 		<td>02/2019&ndash;07/2022</td>
-		<td></td>
-	</tr>-->
+		<td>MS Student in Biostatistics, Emory University</td>
+	</tr>
 	<tr>
 		<td><b>Alex Hickman</b></td>
 		<td>Biomedical Engineering</td>
@@ -492,8 +510,8 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 	<tr>
 		<td><b>Emilie Neulen</b></td>
 		<td>Biology</td>
-		<td>02/2020&ndash;05/2022</td>
-		<td></td>
+		<td>02/2020&ndash;08/2022</td>
+		<td>Biology Patent Examiner</td>
 	</tr>
 	<tr>
 		<td><b>Naifei Pan</b></td>
@@ -598,8 +616,25 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: July 14, 2022</p>
+<p align="right">Last modified: August 15, 2022</p>
 
 </div>
+
+<script>
+var coll = document.getElementsByClassName("collapsible");
+var i;
+
+for (i = 0; i < coll.length; i++) {
+  coll[i].addEventListener("click", function() {
+    this.classList.toggle("active");
+    var content = this.nextElementSibling;
+    if (content.style.display === "block") {
+      content.style.display = "none";
+    } else {
+      content.style.display = "block";
+    }
+  });
+}
+</script>
 
 </body></html>
