--- a/position.htm
+++ b/position.htm
@@ -135,6 +135,10 @@ function myFunction() {
 -->
 <h2 align="center"><font color="#002F6C">Positions</font></h2>
 <hr>
+<p style="line-height: 1.6;">
+We are recruiting motivated students and scholars to work on various topics in genome sciences in a collaborative team. Please click position titles below for details:
+</p>
+<hr>
 <button type="button" class="collapsible">
 <h3><font color="#002F6C">Postdoctoral Research Associate (Experimental)</font></h3>
 </button>
@@ -263,7 +267,7 @@ For questions or inquiries, please email <a href="mailto:zang@virginia.edu">zang
 </p>
 </div>
 <hr>
-<button type="button" class="collapsible">
+<!--<button type="button" class="collapsible">
 <h3><font color="#002F6C">Bioinformatics Research Scientist</font></h3>
 </button>
 <div class="content">
@@ -327,7 +331,7 @@ All positions are restricted and contingent on the continuation of funding. The 
 For questions or inquiries, please email <a href="mailto:zang@virginia.edu">zang@virginia.edu</a>.
 </p>
 </div>
-<hr>
+<hr>-->
 <button type="button" class="collapsible">
 <h3><font color="#002F6C">Graduate Students</font></h3>
 </button>
@@ -355,7 +359,7 @@ Take a look at these two videos about why we are excited to be part of the UVA c
 <a href="https://news.virginia.edu/video/charlottesville" target="_blank">"This is Charlottesville."</a>
 </p>
 <hr>
-<p align="right">Last modified: July 15, 2022</p>
+<p align="right">Last modified: August 15, 2022</p>
 </div>
 
 <script>
