--- a/publication.htm
+++ b/publication.htm
@@ -155,25 +155,25 @@ Manikarna Dinda, Ryan D. Fine, Shekhar Saha, <u>Zhenjia Wang</u>, <u>Chongzhi Za
 <br>
 <b>bioRxiv</b>, doi: <a href="https://www.biorxiv.org/content/10.1101/2022.05.12.491704v1" target="_blank">https://doi.org/10.1101/2022.05.12.491704</a> (2022)
 </p></li>
-<li><p><a href="https://www.biorxiv.org/content/10.1101/2022.03.16.484676v1" target="_blank">Extracting physical characteristics of higher-order chromatin structures from 3D image data</a><br>
-<u>William Franz Lamberti</u>, <u>Chongzhi Zang</u>
-<br>
-<b>bioRxiv</b>, doi: <a href="https://www.biorxiv.org/content/10.1101/2022.03.16.484676v1" target="_blank">https://doi.org/10.1101/2022.03.16.484676</a> (2022)
-</p></li>
 </ol>
 <hr>
 <h3><font color="#002F6C">Selected Publications</font></h3>
 <ol style="padding-left: 24px; line-height: 1.6;">
+<li><p><a href="https://doi.org/10.1016/j.csbj.2022.06.018" target="_blank">Extracting physical characteristics of higher-order chromatin structures from 3D image data</a><br>
+<u>William Franz Lamberti</u>, <u>Chongzhi Zang</u>
+<br>
+<i><b>Computational and Structural Biotechnology Journal</b></i> 20, 3387&ndash;3398 (2022)
+</p></li>
 <li><p><a href="https://www.nature.com/articles/s41467-022-30624-w" target="_blank">Single-cell chromatin profiling of the primitive gut tube reveals regulatory dynamics underlying lineage fate decisions</a><br>
 Ryan J. Smith*, <u>Hongpan Zhang</u>*, <u>Shengen Shawn Hu</u>*, Theodora Yung, Roshane Francis, Lilian Lee, Mark W. Onaitis, Peter B. Dirks, <u>Chongzhi Zang</u><sup>#</sup>, Tae-Hee Kim<sup>#</sup>
 <br>
 <i><b>Nature Communications</b></i> 13, 2965 (2022)
 </p></li>
 <li><p><a href="https://www.nature.com/articles/s41588-022-01069-0" target="_blank">Single-nucleus chromatin accessibility profiling highlights regulatory mechanisms of coronary artery disease risk</a><br>
-Adam W. Turner*, <u>Shengen Shawn Hu</u>*, Jose Verdezoto Mosquera, Wei Feng Ma, Chani J. Hodonsky, Doris Wong, Gaëlle Auguste, Yipei Song, Katia Sol-Church, Emily Farber, Soumya Kundu, Anshul Kundaje, Nicolas G. Lopez, Lijiang Ma, Saikat Kumar B. Ghosh, Suna Onengut-Gumuscu, Euan A. Ashley, Thomas Quertermous, Aloke V. Finn, Nicholas J. Leeper, Jason C. Kovacic, Johan L.M. Björkgren, <u>Chongzhi Zang</u><sup>#</sup>, Clint L. Miller<sup>#</sup>
+Adam W. Turner*, <u>Shengen Shawn Hu</u>*, Jose Verdezoto Mosquera, Wei Feng Ma, Chani J. Hodonsky, Doris Wong, Gaëlle Auguste, Yipei Song, Katia Sol-Church, Emily Farber, Soumya Kundu, Anshul Kundaje, Nicolas G. Lopez, Lijiang Ma, Saikat Kumar B. Ghosh, Suna Onengut-Gumuscu, Euan A. Ashley, Thomas Quertermous, Aloke V. Finn, Nicholas J. Leeper, Jason C. Kovacic,  Johan L. M. Björkegren, <u>Chongzhi Zang</u><sup>#</sup>, Clint L. Miller<sup>#</sup>
 <br>
-<i><b>Nature Genetics</b></i>, doi: 10.1038/s41588-022-01069-0 (2022)<br>
-&nbsp;&nbsp;&nbsp;&nbsp;Summarized in <a href="https://www.nature.com/articles/s41588-022-01029-8" target="_blank"><i>Research Briefing</i>, doi: 10.1038/s41588-022-01029-8</a>
+<i><b>Nature Genetics</b></i> 54, 804&ndash;816 (2022)<br>
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.nature.com/articles/s41588-022-01029-8" target="_blank">Summarized in <i>Research Briefing</i></a>: <i><b>Nature Genetics</b></i> 54, 750&ndash;751 (2022)
 </p></li>
 <li><p><a href="https://www.nature.com/articles/s41590-022-01131-3" target="_blank">Tcf1 preprograms the mobilization of glycolysis in central memory CD8<sup>+</sup> T cells during recall responses</a><br> 
 Qiang Shan*, <u>Shengen Shawn Hu</u>*, Shaoqi Zhu, Xia Chen, Vladimir P. Badovinac, Weiqun Peng, <u>Chongzhi Zang</u><sup>#</sup>, Hai-Hui Xue</u><sup>#</sup>
@@ -294,7 +294,7 @@ Shenglin Mei, Clifford A. Meyer, Rongbin Zheng, Qian Qin, Qiu Wu, Peng Jiang, Bo
 <p><font color="#002F6C"><b>Publications before the Zang Lab launches</b></font></p>
 </button>
 <div class="content">
-<ol style="padding-left: 24px; line-height: 1.6;" start="28">
+<ol style="padding-left: 24px; line-height: 1.6;" start="29">
 <li><p><a href="http://stke.sciencemag.org/content/10/477/eaag1598" target="_blank">Genome-wide identification and characterization of Notch transcription complex-binding sequence-paired sites in leukemia cells</a><br> 
 Eric Severson*, Kelly L. Arnett*, Hongfang Wang*, <u>Chongzhi Zang</u>*, Len Taing, Hudan Liu, Warren S. Pear, X. Shirley Liu, Stephen C. Blacklow<sup>#</sup>, Jon C. Aster<sup>#</sup><br>
 <i><b>Science Signaling</b></i> 10, 477, eaag1598 (2017)
@@ -414,7 +414,7 @@ Zuo-Qiang Hao, Jie Zhang<sup>#</sup>, Jin Yu, Zhe Zhang, Jia-Yong Zhong, <u>Chon
 </ol>
 </div>
 <hr>
-<p align="right">Last modified: May 31, 2022</p>
+<p align="right">Last modified: August 15, 2022</p>
 </div>
 
 <script>
