--- a/teaching.htm
+++ b/teaching.htm
@@ -61,6 +61,22 @@ ul.topnav li.icon {display: none;}
     text-align: left;
   }
 }
+
+.column {
+    float: left;
+}
+.left {
+  width: 16%;
+}
+.right {
+  width: 84%;
+}
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
 </style>
 <title>Chongzhi Zang Lab</title>
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
@@ -86,6 +102,11 @@ ul.topnav li.icon {display: none;}
 </ul>
 
 <h2 align="center"><font color="#002F6C">Teaching</font></h2>
+<hr>
+<h3><a href="https://med.virginia.edu/bims/bims-courses/bims-6000-core-course-in-integrative-biosciences/" target="_blank"><font color="#002F6C">BIMS 6000: Core Course in Integrative Biosciences</font></a></h3>
+<p style="line-height: 1.6;">
+	Fall 2022 Lecture: Visualization and interpretation of high-throughput genomics data. <!--<a href="slides/BIOC8014_chromatinII_week6.pdf" target="_blank">[Slides]</a>-->
+</p>
 <hr>
 <h3><font color="#002F6C">BIMS 8601: Foundations of Computational Genomics</font></h3>
 <p style="line-height: 1.6;">
@@ -118,16 +139,45 @@ ul.topnav li.icon {display: none;}
 <h3><font color="#002F6C">BIOL 4910 / CHEM 3951: Undergraduate Research</font></h3>
 <p style="line-height: 1.6;">Undergraduate students who are doing research training in the lab can register for credits through <a href="https://chemistry.as.virginia.edu/undergraduate-research" target="_blank">Chemistry</a> or <a href="https://bio.as.virginia.edu/undergraduate/research" target="_blank">Biology</a> departments. Please contact Dr. Zang for details.</p>
 <hr>
-<h3><font color="#002F6C">Epigenetics and Environmental Diseases (New York University EHSC-GA-2050)</font></h3>
-<p style="line-height: 1.6;">Spring 2021 <a href="slides/NYU_Epigenetics_NGS_data_analysis_20210420.pdf" target="_blank">Guest Lecture: Analysis of Next-Generation Sequencing Data for Epigenetics</a>
-</p>
+<h3><font color="#002F6C">Guest Lectures</font></h3>
+<div class="row">
+	<div class="column left">
+		<p>
+		Fall 2021
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		<font color="#002F6C"><b>UVA BME 1501: Introduction to Bioinformatics</b></font>: <a href="slides/BME1501_20211108.pdf" target="_blank">My Journey in Bioinformatics</a>
+		</p>
+	</div>
+</div>
+<div class="row">
+	<div class="column left">
+		<p>
+		Spring 2021
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		<font color="#002F6C"><b>NYU EHSC-GA-2050: Epigenetics and Environmental Diseases</b></font>: <a href="slides/NYU_Epigenetics_NGS_data_analysis_20210420.pdf" target="_blank">Analysis of Next-Generation Sequencing Data for Epigenetics</a>
+		</p>
+	</div>
+</div>
+<div class="row">
+	<div class="column left">
+		<p>
+		May 2016
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		<font color="#002F6C"><b>NCI Data Analysis Workshop</b></font>: <a href="slides/ChIPseq_SICER_CZ.pdf" target="_blank">Analyzing ChIP-seq data with SICER</a>
+		</p>
+	</div>
+</div>
 <hr>
-<h3><font color="#002F6C">ChIP-Seq Data Analysis Workshop (NIH, May 2016)</font></h3>
-<p style="line-height: 1.6;">
-<a href="slides/ChIPseq_SICER_CZ.pdf" target="_blank">Lecture slides: Analyzing ChIP-seq data with SICER</a>
-</p>
-<hr>
-<p align="right">Last modified: May 4, 2022</p>
+<p align="right">Last modified: August 15, 2022</p>
 </div>
 
 </body></html>
