--- a/research.htm
+++ b/research.htm
@@ -159,7 +159,7 @@ function myFunction() {
 The research in the lab focuses on two aspects: 1) developing quantitative models and computational methods for analyzing high-throughput data generated from emerging genomics technologies; and 2) using innovative computational and data science approaches to study epigenetics and transcriptional regulation of gene expression in mammalian cell systems and human diseases such as cancer.
 </p>
 <p style="line-height: 1.6;">
-How gene expression is regulated in chromatin is a fundamental question in molecular biology. The transcriptional program is a major determinant of cell identity; its dysregulation is involved in many diseases, including cancer. High-throughput genomics technologies enable us to obtain massive data measuring numerous factors and elements in the genome that affect chromatin states and gene regulation. We leverage big data and conduct computational research at the intersection of functional genomics, epigenetics, and cancer biology. Several ongoing research directions include:
+How gene expression is regulated in chromatin is a fundamental question in molecular biology. The transcription program is a major determinant of cell identity; transcriptional regulation is involved in many biological processes and human diseases. Advanced genomics technologies such as high-throughput sequencing, single-cell and spatial omics assays enable us to obtain massive data measuring the dynamic patterns of numerous factors and elements in the genome that affect chromatin states and gene regulation. We leverage big data and combine computational and experimental research at the intersection of functional genomics, epigenetics, and cancer biology. Several ongoing research directions include:
 </p>
 <br>
 <h3><font color="#002F6C">1. <i>Bioinformatics methods for emerging omics technologies</i></font></h2>
@@ -189,6 +189,7 @@ Data-driven discovery has become a new paradigm of biological research. By model
 </button>
 <div class="content">
 <ul style="list-style-type:disc; padding-left: 24px; line-height: 1.6;"><p>
+<li><a href="https://uvahealth.com/findadoctor/profile/todd-w-bauer" target="_blank"><font color="#002F6C">Todd W. Bauer</font></a>, Division of Surgical Oncology, Department of Surgery, University of Virginia</li>
 <li><a href="https://med.nyu.edu/faculty/suresh-cuddapah" target="_blank"><font color="#002F6C">Suresh Cuddapah</font></a>, Department of Environmental Medicine, New York University</li>
 <li><a href="https://dutta-labwebsite.github.io/" target="_blank"><font color="#002F6C">Anindya Dutta</font></a>, Department of Genetics, University of Alabama at Birmingham</li>
 <li><a href="https://med.virginia.edu/faculty/faculty-listing/fg5q/" target="_blank"><font color="#002F6C">Francine Garrett-Bakelman</font></a>, Department of Biochemistry and Molecular Genetics, University of Virginia</li>
@@ -200,6 +201,8 @@ Data-driven discovery has become a new paradigm of biological research. By model
 <li><a href="https://med.virginia.edu/faculty/faculty-listing/gm7sj/" target="_blank"><font color="#002F6C">Golam Mohi</font></a>, Department of Biochemistry and Molecular Genetics, University of Virginia</li>
 <li><a href="https://med.virginia.edu/faculty/faculty-listing/ar7jq/" target="_blank"><font color="#002F6C">Aakrosh Ratan</font></a>, Center for Public Health Genomics, University of Virginia</li>
 <li><a href="https://med.virginia.edu/faculty/faculty-listing/jss5y/" target="_blank"><font color="#002F6C">Jeffrey S. Smith</font></a>, Department of Biochemistry and Molecular Genetics, University of Virginia</li>
+<li><a href="https://toddstuke.wixsite.com/stukelab" target="_blank"><font color="#002F6C">P. Todd Stukenberg</font></a>, Department of Biochemistry and Molecular Genetics, University of Virginia</li>
+<li><a href="https://uvahealth.com/findadoctor/profile/jianguo-tao" target="_blank"><font color="#002F6C">Jianguo Tao</font></a>, Department of Pathology, University of Virginia</li>
 <li><a href="https://campuspress.yale.edu/wanglab/" target="_blank"><font color="#002F6C">Siyuan Steven Wang</font></a>, Department of Genetics, Yale University</li>
 <li><a href="https://med.virginia.edu/yuh-hwa-wang-lab/" target="_blank"><font color="#002F6C">Yuh-Hwa Wang</font></a>, Department of Biochemistry and Molecular Genetics, University of Virginia</li>
 <li><a href="https://hmh-cdi.org/our-team/xue-lab/" target="_blank"><font color="#002F6C">Hai-Hui Xue</font></a>, Center for Discovery and Innovation, Hackensack University Medical Center</li>
@@ -207,6 +210,7 @@ Data-driven discovery has become a new paradigm of biological research. By model
 <li><a href="https://engineering.virginia.edu/faculty/aidong-zhang" target="_blank"><font color="#002F6C">Aidong Zhang</font></a>, Department of Computer Science, University of Virginia</li>
 <li><a href="https://www.stat.pitt.edu/people/tingting-zhang" target="_blank"><font color="#002F6C">Tingting Zhang</font></a>, Department of Statistics, University of Pittsburgh</li>
 <li><a href="https://zhulab.wordpress.com/" target="_blank"><font color="#002F6C">Yuan Zhu</font></a>, Children's Research Institute, Children’s National Medical Center</li>
+(in alphabetical order)
 </p></ul>
 </div>
 <hr>
@@ -245,7 +249,7 @@ Data-driven discovery has become a new paradigm of biological research. By model
 </div>
 </div>
 <hr>
-<p align="right">Last modified: February 24, 2022</p>
+<p align="right">Last modified: August 15, 2022</p>
 
 </div>
 
