--- a/people.htm
+++ b/people.htm
@@ -154,7 +154,7 @@ function myFunction() {
 <div class="ism-slider" data-transition_type="fade" data-play_type="loop" id="home-slider">
   <ol>
     <li>
-      <img src="images/20210814.jpg">
+      <img src="images/20220827.jpg">
     </li>
     <li>
       <img src="images/20210815.jpg">
@@ -324,15 +324,15 @@ Caitlin McIntyre is an undergraduate student (Class of 2024) from the Bay Area m
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Ivory Tang (Class of 2025) plans to major in math and follow a pre-med track. She is looking forward to combining topics in biology, statistics, and computer science and hopes to attend medical school after graduation. In her free time, she enjoys listening to music and spending time outside.
 </p><br><br><br>
-<hr>
+<!--<hr>
 <h3><font color="#002F6C">High School Students</font></h3>
-<!--<p style="line-height: 1.6;">
+<p style="line-height: 1.6;">
 <img align="right" src="images/sonnet_xu.jpg" style="width:180px">
 <b>Sonnet Xu</b>
 <a href="mailto:duf7xd@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Sonnet is a current student at Troy High School (class of 2023) in Michigan interested in computational biology and computer science. She looks forward to learning more about gene expression and the epigenetic mechanisms of cancer. In her free time, she likes to hike outside and travel.
-</p><br><br><br>-->
+</p><br><br><br>
 <p style="line-height: 1.6;">
 <b>Katherine Zhang</b>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
@@ -352,7 +352,7 @@ UVA Advance 2022 Summer Student, from Mclean High School, Mclean, VA
 <b>Chris Stewart</b>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, VA
-</p><br><br>
+</p><br><br>-->
 <hr>
 <h3><font color="#002F6C">Lab Alumni</font></h3>
 <h4><font color="#002F6C">Postdoctoral Associates</font></h4>
@@ -609,6 +609,40 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 	</tr>
 </table>
 <br>
+<h4><font color="#002F6C">High School Students</font></h4>
+<table id="alumni">
+	<tr>
+		<th>Name</th>
+		<th>School Affiliation</th>
+		<th>Time at Lab</th>
+		<th>Position at Lab</th>
+	</tr>
+	<tr>
+		<td><b>Elizabeth McClung</b></td>
+		<td>Rockbridge County High School, Lexington, VA ('23)</td>
+		<td>07/2022&ndash;08/2022</td>
+		<td>UVA Advance Summer Program</td>
+	</tr>
+	<tr>
+		<td><b>Riya Shah</b></td>
+		<td>Mclean High School, Mclean, VA ('23)</td>
+		<td>07/2022&ndash;08/2022</td>
+		<td>UVA Advance Summer Program</td>
+	</tr>
+	<tr>
+		<td><b>Chris Stewart</b></td>
+		<td>Monticello High School, Charlottesville, VA ('23)</td>
+		<td>07/2022&ndash;08/2022</td>
+		<td>UVA Advance Summer Program</td>
+	</tr>
+	<tr>
+		<td><b>Katherine Zhang</b></td>
+		<td>Thomas Jefferson High School for Science and Technology, Alexandria, VA ('24)</td>
+		<td>06/2022&ndash;08/2022</td>
+		<td>Volunteer</td>
+	</tr>
+</table>
+<br>
 <hr>
 <h3><font color="#002F6C">We are recruiting!</font></h3>
 <p style="line-height: 1.6;">
@@ -616,7 +650,7 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: August 15, 2022</p>
+<p align="right">Last modified: August 30, 2022</p>
 
 </div>
 
