--- a/people.htm
+++ b/people.htm
@@ -157,6 +157,9 @@ function myFunction() {
       <img src="images/20220827.jpg">
     </li>
     <li>
+      <img src="images/20210815_2.jpg">
+    </li>
+    <li>
       <img src="images/20210815.jpg">
     </li>
     <li>
@@ -185,6 +188,9 @@ function myFunction() {
     </li>
     <li>
       <img src="images/people03.jpg">
+    </li>
+    <li>
+      <img src="images/people02.jpg">
     </li>
     <li>
       <img src="images/people01.jpg">
@@ -264,7 +270,7 @@ Mengxue Tian is a PhD student in the Biomedical Sciences (BIMS) program. Before 
 <p style="line-height: 1.6;">
 <img align="right" src="images/hongpan_zhang.jpg" style="width:180px">
 <b>Hongpan Zhang</b>
-<a href="mailto:hz9fq@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
+<a href="mailto:hz9fq@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a> <a href="https://scholar.google.com/citations?user=mf3pescAAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Hongpan Zhang is a PhD student in the Biomedical Sciences (BIMS) program. Before joining the lab in 2019, he obtained two bachelor's degrees in life sciences and software engineering from Sichuan University in China. Hongpan is keen to study the connection between genomic phenomena and diseases. He hopes to raise his knowledge of biological issues in his research work. Hongpan is a basketball fan and also loves other sports events. He is interested in historical knowledge as well.
 </p><br><br>
@@ -650,7 +656,7 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: August 30, 2022</p>
+<p align="right">Last modified: August 31, 2022</p>
 
 </div>
 
