--- a/publication.htm
+++ b/publication.htm
@@ -145,11 +145,6 @@ function myFunction() {
 <br>
 <b>bioRxiv</b>, doi: <a href="https://www.biorxiv.org/content/10.1101/2021.10.22.465530v2" target="_blank">https://doi.org/10.1101/2021.10.22.465530</a> (2022)
 </p></li>
-<li><p><a href="https://www.biorxiv.org/content/10.1101/2021.09.22.461437v2" target="_blank">Nonparametric interrogation of transcriptional regulation in single-cell RNA and chromatin accessibility multiomic data</a><br>
-Yuchao Jiang<sup>#</sup>, Yuriko Harigaya, Zhaojun Zhang, <u>Hongpan Zhang</u>, <u>Chongzhi Zang</u>, Nancy R Zhang<sup>#</sup>
-<br>
-<b>bioRxiv</b>, doi: <a href="https://www.biorxiv.org/content/10.1101/2021.09.22.461437v2" target="_blank">https://doi.org/10.1101/2021.09.22.461437</a> (2022)
-</p></li>
 <li><p><a href="https://www.biorxiv.org/content/10.1101/2022.05.12.491704v1" target="_blank">Fob1-dependent condensin recruitment and loop extrusion on yeast chromosome III</a><br>
 Manikarna Dinda, Ryan D. Fine, Shekhar Saha, <u>Zhenjia Wang</u>, <u>Chongzhi Zang</u>, Mingguang Li, Jeffrey S. Smith
 <br>
@@ -159,6 +154,11 @@ Manikarna Dinda, Ryan D. Fine, Shekhar Saha, <u>Zhenjia Wang</u>, <u>Chongzhi Za
 <hr>
 <h3><font color="#002F6C">Selected Publications</font></h3>
 <ol style="padding-left: 24px; line-height: 1.6;">
+<li><p><a href="https://www.cell.com/cell-systems/fulltext/S2405-4712(22)00348-9" target="_blank">Nonparametric single-cell multiomic characterization of trio relationships between transcription factors, target genes, and cis-regulatory regions</a><br>
+Yuchao Jiang<sup>#</sup>, Yuriko Harigaya, Zhaojun Zhang, <u>Hongpan Zhang</u>, <u>Chongzhi Zang</u>, Nancy R Zhang<sup>#</sup>
+<br>
+<i><b>Cell Systems</b></i> 13, 1&ndash;15 (2022)
+</p></li>
 <li><p><a href="https://doi.org/10.1016/j.csbj.2022.06.018" target="_blank">Extracting physical characteristics of higher-order chromatin structures from 3D image data</a><br>
 <u>William Franz Lamberti</u>, <u>Chongzhi Zang</u>
 <br>
@@ -294,7 +294,7 @@ Shenglin Mei, Clifford A. Meyer, Rongbin Zheng, Qian Qin, Qiu Wu, Peng Jiang, Bo
 <p><font color="#002F6C"><b>Publications before the Zang Lab launches</b></font></p>
 </button>
 <div class="content">
-<ol style="padding-left: 24px; line-height: 1.6;" start="29">
+<ol style="padding-left: 24px; line-height: 1.6;" start="30">
 <li><p><a href="http://stke.sciencemag.org/content/10/477/eaag1598" target="_blank">Genome-wide identification and characterization of Notch transcription complex-binding sequence-paired sites in leukemia cells</a><br> 
 Eric Severson*, Kelly L. Arnett*, Hongfang Wang*, <u>Chongzhi Zang</u>*, Len Taing, Hudan Liu, Warren S. Pear, X. Shirley Liu, Stephen C. Blacklow<sup>#</sup>, Jon C. Aster<sup>#</sup><br>
 <i><b>Science Signaling</b></i> 10, 477, eaag1598 (2017)
@@ -414,7 +414,7 @@ Zuo-Qiang Hao, Jie Zhang<sup>#</sup>, Jin Yu, Zhe Zhang, Jia-Yong Zhong, <u>Chon
 </ol>
 </div>
 <hr>
-<p align="right">Last modified: August 15, 2022</p>
+<p align="right">Last modified: September 1, 2022</p>
 </div>
 
 <script>
