--- a/publication.htm
+++ b/publication.htm
@@ -157,7 +157,7 @@ Manikarna Dinda, Ryan D. Fine, Shekhar Saha, <u>Zhenjia Wang</u>, <u>Chongzhi Za
 <li><p><a href="https://www.cell.com/cell-systems/fulltext/S2405-4712(22)00348-9" target="_blank">Nonparametric single-cell multiomic characterization of trio relationships between transcription factors, target genes, and cis-regulatory regions</a><br>
 Yuchao Jiang<sup>#</sup>, Yuriko Harigaya, Zhaojun Zhang, <u>Hongpan Zhang</u>, <u>Chongzhi Zang</u>, Nancy R Zhang<sup>#</sup>
 <br>
-<i><b>Cell Systems</b></i> 13, 1&ndash;15 (2022)
+<i><b>Cell Systems</b></i> 13, doi: <a href="https://www.cell.com/cell-systems/fulltext/S2405-4712(22)00348-9" target="_blank">https://doi.org/10.1016/j.cels.2022.08.004</a> (2022)
 </p></li>
 <li><p><a href="https://doi.org/10.1016/j.csbj.2022.06.018" target="_blank">Extracting physical characteristics of higher-order chromatin structures from 3D image data</a><br>
 <u>William Franz Lamberti</u>, <u>Chongzhi Zang</u>
