--- a/people.htm
+++ b/people.htm
@@ -329,8 +329,23 @@ Caitlin McIntyre is an undergraduate student (Class of 2024) from the Bay Area m
 <a href="mailto:bjm7vv@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Ivory Tang (Class of 2025) plans to major in math and follow a pre-med track. She is looking forward to combining topics in biology, statistics, and computer science and hopes to attend medical school after graduation. In her free time, she enjoys listening to music and spending time outside.
+</p><br><br><br><br>
+<p style="line-height: 1.6;">
+<img align="right" src="images/andy_cao.jpg" style="width:180px">
+<b>Andy Cao</b>
+<a href="mailto:kcz3my@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+Andy Cao is a Second Year undergraduate student (Class of 2025) planning to study Biology and Computer Science on a pre-med track. He is excited to develop and apply computational algorithms to explore the human genome and questions relating to genomic disorders.
 </p><br><br><br>
-<!--<hr>
+<!--<p style="line-height: 1.6;">
+<b>Jingyi Wang</b>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+</p><br>
+<p style="line-height: 1.6;">
+<b>Jennifer Wu</b>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+</p><br>
+<hr>
 <h3><font color="#002F6C">High School Students</font></h3>
 <p style="line-height: 1.6;">
 <img align="right" src="images/sonnet_xu.jpg" style="width:180px">
@@ -656,7 +671,7 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: August 31, 2022</p>
+<p align="right">Last modified: September 10, 2022</p>
 
 </div>
 
