--- a/publication.htm
+++ b/publication.htm
@@ -136,24 +136,25 @@ function myFunction() {
 <h2 align="center"><font color="#002F6C">Publications</font></h2>
 <hr>
 <h3><a href="https://scholar.google.com/citations?user=GV7vSDMAAAAJ" target="_blank"><font color="#002F6C">Google Scholar profile</font></a></h3>
-<hr>
+<!--<hr>
 <h3><font color="#002F6C">Recent Preprints</font></h3>
 * indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.
 <ol style="padding-left: 24px; line-height: 1.6;">
-<li><p><a href="https://www.biorxiv.org/content/10.1101/2021.10.22.465530v2" target="_blank">Accurate estimation of intrinsic biases for improved analysis of bulk and single-cell chromatin accessibility sequencing data using SELMA</a><br>
-<u>Shengen Shawn Hu</u>, Lin Liu, Qi Li, <u>Wenjing Ma</u>, Michael J. Guertin, Clifford A. Meyer, Ke Deng, Tingting Zhang, <u>Chongzhi Zang</u>
-<br>
-<b>bioRxiv</b>, doi: <a href="https://www.biorxiv.org/content/10.1101/2021.10.22.465530v2" target="_blank">https://doi.org/10.1101/2021.10.22.465530</a> (2022)
-</p></li>
 <li><p><a href="https://www.biorxiv.org/content/10.1101/2022.05.12.491704v1" target="_blank">Fob1-dependent condensin recruitment and loop extrusion on yeast chromosome III</a><br>
 Manikarna Dinda, Ryan D. Fine, Shekhar Saha, <u>Zhenjia Wang</u>, <u>Chongzhi Zang</u>, Mingguang Li, Jeffrey S. Smith
 <br>
 <b>bioRxiv</b>, doi: <a href="https://www.biorxiv.org/content/10.1101/2022.05.12.491704v1" target="_blank">https://doi.org/10.1101/2022.05.12.491704</a> (2022)
 </p></li>
-</ol>
+</ol>-->
 <hr>
 <h3><font color="#002F6C">Selected Publications</font></h3>
+* indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.
 <ol style="padding-left: 24px; line-height: 1.6;">
+<li><p><a href="https://www.nature.com/articles/s41467-022-33194-z" target="_blank">Intrinsic bias estimation for improved analysis of bulk and single-cell chromatin accessibility profiles using SELMA</a><br>
+<u>Shengen Shawn Hu</u>, Lin Liu, Qi Li, <u>Wenjing Ma</u>, Michael J. Guertin, Clifford A. Meyer, Ke Deng, Tingting Zhang, <u>Chongzhi Zang</u>
+<br>
+<i><b>Nature Communications</b></i> 13, 5533 (2022)
+</p></li>
 <li><p><a href="https://www.cell.com/cell-systems/fulltext/S2405-4712(22)00348-9" target="_blank">Nonparametric single-cell multiomic characterization of trio relationships between transcription factors, target genes, and cis-regulatory regions</a><br>
 Yuchao Jiang<sup>#</sup>, Yuriko Harigaya, Zhaojun Zhang, <u>Hongpan Zhang</u>, <u>Chongzhi Zang</u>, Nancy R Zhang<sup>#</sup>
 <br>
@@ -294,7 +295,7 @@ Shenglin Mei, Clifford A. Meyer, Rongbin Zheng, Qian Qin, Qiu Wu, Peng Jiang, Bo
 <p><font color="#002F6C"><b>Publications before the Zang Lab launches</b></font></p>
 </button>
 <div class="content">
-<ol style="padding-left: 24px; line-height: 1.6;" start="30">
+<ol style="padding-left: 24px; line-height: 1.6;" start="31">
 <li><p><a href="http://stke.sciencemag.org/content/10/477/eaag1598" target="_blank">Genome-wide identification and characterization of Notch transcription complex-binding sequence-paired sites in leukemia cells</a><br> 
 Eric Severson*, Kelly L. Arnett*, Hongfang Wang*, <u>Chongzhi Zang</u>*, Len Taing, Hudan Liu, Warren S. Pear, X. Shirley Liu, Stephen C. Blacklow<sup>#</sup>, Jon C. Aster<sup>#</sup><br>
 <i><b>Science Signaling</b></i> 10, 477, eaag1598 (2017)
@@ -414,7 +415,7 @@ Zuo-Qiang Hao, Jie Zhang<sup>#</sup>, Jin Yu, Zhe Zhang, Jia-Yong Zhong, <u>Chon
 </ol>
 </div>
 <hr>
-<p align="right">Last modified: September 1, 2022</p>
+<p align="right">Last modified: September 21, 2022</p>
 </div>
 
 <script>
