--- a/index.htm
+++ b/index.htm
@@ -169,7 +169,7 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
-		Shawn's <a href="https://www.biorxiv.org/content/10.1101/2021.10.22.465530v2" target="_blank">SELMA paper</a> is accepted to <b><i>Nature Communications</i></b>!
+		Shawn's SELMA paper is accepted to <a href="https://www.nature.com/articles/s41467-022-33194-z" target="_blank"><b><i>Nature Communications</i></b></a>!
 		</p>
 	</div>
 </div>
@@ -882,7 +882,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: September 8, 2022</p>
+<p align="right">Last modified: September 21, 2022</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
