--- a/software.htm
+++ b/software.htm
@@ -122,7 +122,7 @@ ul.topnav li.icon {display: none;}
 <tr>
 <td style="width:120px; height:120px"><a href="https://github.com/zang-lab/SELMA" target="_blank"><img src="images/selma_logo.jpg" style="width:100px"></a></td>
 <td><p>
-<b><a href="https://github.com/zang-lab/SELMA" target="_blank">SELMA</a></b> (<u>S</u>implex <u>E</u>ncoded <u>L</u>inear <u>M</u>odel for <u>A</u>ccessible chromatin), a computational model for estimation and correction of intrinsic enzymatic cleavage biases in bulk and single-cell chromatin accessibility profiling (DNase-seq and ATAC-seq) data. [<a href="https://github.com/zang-lab/SELMA" target="_blank">Package</a>] [<a href="https://www.biorxiv.org/content/10.1101/2021.10.22.465530v2" target="_blank">Preprint</a>]
+<b><a href="https://github.com/zang-lab/SELMA" target="_blank">SELMA</a></b> (<u>S</u>implex <u>E</u>ncoded <u>L</u>inear <u>M</u>odel for <u>A</u>ccessible chromatin), a computational model for estimation and correction of intrinsic enzymatic cleavage biases in bulk and single-cell chromatin accessibility profiling (DNase-seq and ATAC-seq) data. [<a href="https://github.com/zang-lab/SELMA" target="_blank">Package</a>] [<a href="https://www.nature.com/articles/s41467-022-33194-z" target="_blank">Publication</a>]
 </p></td>
 </tr>
 <tr>
@@ -146,7 +146,7 @@ ul.topnav li.icon {display: none;}
 </tr>
 </table>
 <hr>
-<p align="right">Last modified: June 1, 2022</p>
+<p align="right">Last modified: September 26, 2022</p>
 </div>
 
 </body></html>
