--- a/research.htm
+++ b/research.htm
@@ -167,7 +167,7 @@ How gene expression is regulated in chromatin is a fundamental question in molec
 <h3><font color="#002F6C">1. <i>Bioinformatics methods for emerging omics technologies</i></font></h2>
 <img align="right" src="images/sicer.jpg" style="width:240px">
 <p style="width: 620px; line-height: 1.6;">
-Modern development of life sciences has been accelerated by new technologies. Innovative analytics methods are essential for converting high-throughput experimental data into scientific knowledge. We are interested in developing innovative statistical models and algorithms for analyzing data from emerging genomics technologies. As a pioneer in next-generation sequencing (NGS) bioinformatics, we developed SICER (<a href="https://academic.oup.com/bioinformatics/article/25/15/1952/212783" target="_blank"><i>Bioinformatics</i> 2009</a>), one of the most widely used methods for ChIP-seq data analysis. We are currently developing new methods for unbiased analysis of data from epigenomics (ATAC-seq, CUT&RUN, CUT&Tag, etc.), single-cell multi-omics, and spatial omics techniques to study gene regulation.
+Modern development of life sciences has been accelerated by new technologies. Innovative analytics methods are essential for converting high-throughput experimental data into scientific knowledge. We are interested in developing innovative statistical models and algorithms for analyzing data from emerging genomics technologies. As a pioneer in next-generation sequencing (NGS) bioinformatics, we developed SICER (<a href="https://academic.oup.com/bioinformatics/article/25/15/1952/212783" target="_blank"><i>Bioinformatics</i> 2009</a>), one of the most widely used methods for ChIP-seq data analysis. We are currently developing new methods for unbiased analysis of data from epigenomics (ATAC-seq, CUT&RUN, CUT&Tag, etc.), single-cell multi-omics, and spatial omics techniques to study gene regulation (<a href="https://www.nature.com/articles/s41467-022-33194-z" target="_blank"><i>Nature Commun</i> 2022</a>).
 </p>
 <br>
 <h3><font color="#002F6C">2. <i>Machine learning methods for regulatory factor prediction and multi-omics integration</i></font></h2>
@@ -184,7 +184,7 @@ Data-driven discovery has become a new paradigm of biological research. By model
 <br><br>
 <hr>
 <h3><font color="#002F6C">Collaborations</font></h3>
-<p style="line-height: 1.6;">Computational biology is an interdisciplinary science. It cannot thrive without close collaboration between researchers with different backgrounds and expertises. We always commit to collaborations and team science with experimental biologists, clinicians, as well as statisticians, computer scientists, mathematicians, and physicists. We study functional epigenetics and transcriptional regulation in a variety of biological systems and human diseases, including T-cell immunity, malignant peripheral nerve sheath tumor (MPNST), acute myeloid leukemia (AML), T-cell acute lymphoblastic leukemia (T-ALL), colorectal cancer, coronary artery disease, development, physical activity (with <a href="https://www.motrpac.org/" target="_blank">MoTrPAC</a>), and environmental health, etc.</p>
+<p style="line-height: 1.6;">Computational biology is an interdisciplinary science. It cannot thrive without close collaboration between researchers with different backgrounds and expertises. We always commit to collaborations and team science with experimental biologists, clinicians, as well as statisticians, computer scientists, mathematicians, and physicists. We study functional epigenetics and transcriptional regulation in a variety of biological systems and human diseases, including T-cell immunity, malignant peripheral nerve sheath tumor (MPNST), acute myeloid leukemia (AML), T-cell acute lymphoblastic leukemia (T-ALL), colorectal cancer, coronary artery disease, development, and environmental health, etc.</p>
 <button type="button" class="collapsible">
 <p style="line-height: 1.6;">Our collaborators include (click to expand)
 </p>
@@ -195,7 +195,6 @@ Data-driven discovery has become a new paradigm of biological research. By model
 <li><a href="https://med.nyu.edu/faculty/suresh-cuddapah" target="_blank"><font color="#002F6C">Suresh Cuddapah</font></a>, Department of Environmental Medicine, New York University</li>
 <li><a href="https://dutta-labwebsite.github.io/" target="_blank"><font color="#002F6C">Anindya Dutta</font></a>, Department of Genetics, University of Alabama at Birmingham</li>
 <li><a href="https://med.virginia.edu/faculty/faculty-listing/fg5q/" target="_blank"><font color="#002F6C">Francine Garrett-Bakelman</font></a>, Department of Biochemistry and Molecular Genetics, University of Virginia</li>
-<li><a href="http://guertinlab.org/" target="_blank"><font color="#002F6C">Michael J. Guertin</font></a>, Department of Genetics and Genome Sciences, University of Connecticut</li>
 <li><a href="https://med.virginia.edu/faculty/faculty-listing/hj8d/" target="_blank"><font color="#002F6C">Hao Jiang</font></a>, Department of Biochemistry and Molecular Genetics, University of Virginia</li>
 <li><a href="http://lilab.medicine.virginia.edu/" target="_blank"><font color="#002F6C">Hui Li</font></a>, Department of Pathology, University of Virginia</li>
 <li><a href="https://uvahealth.com/findadoctor/profile/li-li" target="_blank"><font color="#002F6C">Li Li</font></a>, Department of Family Medicine, University of Virginia</li>
@@ -203,15 +202,15 @@ Data-driven discovery has become a new paradigm of biological research. By model
 <li><a href="https://med.virginia.edu/faculty/faculty-listing/gm7sj/" target="_blank"><font color="#002F6C">Golam Mohi</font></a>, Department of Biochemistry and Molecular Genetics, University of Virginia</li>
 <li><a href="https://med.virginia.edu/faculty/faculty-listing/ar7jq/" target="_blank"><font color="#002F6C">Aakrosh Ratan</font></a>, Center for Public Health Genomics, University of Virginia</li>
 <li><a href="https://med.virginia.edu/faculty/faculty-listing/jss5y/" target="_blank"><font color="#002F6C">Jeffrey S. Smith</font></a>, Department of Biochemistry and Molecular Genetics, University of Virginia</li>
+<li><a href="https://www.immunology.virginia.edu/Sun/" target="_blank"><font color="#002F6C">Jie Sun</font></a>, Beirne B. Carter Center for Immunology Research, University of Virginia</li>
 <li><a href="https://toddstuke.wixsite.com/stukelab" target="_blank"><font color="#002F6C">P. Todd Stukenberg</font></a>, Department of Biochemistry and Molecular Genetics, University of Virginia</li>
 <li><a href="https://uvahealth.com/findadoctor/profile/jianguo-tao" target="_blank"><font color="#002F6C">Jianguo Tao</font></a>, Department of Pathology, University of Virginia</li>
 <li><a href="https://campuspress.yale.edu/wanglab/" target="_blank"><font color="#002F6C">Siyuan Steven Wang</font></a>, Department of Genetics, Yale University</li>
 <li><a href="https://med.virginia.edu/yuh-hwa-wang-lab/" target="_blank"><font color="#002F6C">Yuh-Hwa Wang</font></a>, Department of Biochemistry and Molecular Genetics, University of Virginia</li>
 <li><a href="https://hmh-cdi.org/our-team/xue-lab/" target="_blank"><font color="#002F6C">Hai-Hui Xue</font></a>, Center for Discovery and Innovation, Hackensack University Medical Center</li>
-<li><a href="https://training.cvrc.virginia.edu/Yan/" target="_blank"><font color="#002F6C">Zhen Yan</font></a>, Center for Skeletal Muscle Research, Robert M. Berne Cardiovascular Research Center, University of Virginia</li>
 <li><a href="https://engineering.virginia.edu/faculty/aidong-zhang" target="_blank"><font color="#002F6C">Aidong Zhang</font></a>, Department of Computer Science, University of Virginia</li>
-<li><a href="https://www.stat.pitt.edu/people/tingting-zhang" target="_blank"><font color="#002F6C">Tingting Zhang</font></a>, Department of Statistics, University of Pittsburgh</li>
 <li><a href="https://zhulab.wordpress.com/" target="_blank"><font color="#002F6C">Yuan Zhu</font></a>, Children's Research Institute, Children’s National Medical Center</li>
+<li><a href="https://mic.med.virginia.edu/zong/" target="_blank"><font color="#002F6C">Hui Zong</font></a>, Department of Microbiology, Immunology and Cancer Biology, University of Virginia</li>
 (in alphabetical order)
 </p></ul>
 </div>
@@ -251,7 +250,7 @@ Data-driven discovery has become a new paradigm of biological research. By model
 </div>
 </div>
 <hr>
-<p align="right">Last modified: August 24, 2022</p>
+<p align="right">Last modified: September 26, 2022</p>
 
 </div>
 
