--- a/index.htm
+++ b/index.htm
@@ -169,7 +169,7 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
-		Shawn's SELMA paper is accepted to <a href="https://www.nature.com/articles/s41467-022-33194-z" target="_blank"><b><i>Nature Communications</i></b></a>!
+		Shawn's SELMA paper is published in <a href="https://www.nature.com/articles/s41467-022-33194-z" target="_blank"><b><i>Nature Communications</i></b></a>!
 		</p>
 	</div>
 </div>
