--- a/people.htm
+++ b/people.htm
@@ -157,6 +157,9 @@ function myFunction() {
       <img src="images/20220827.jpg">
     </li>
     <li>
+      <img src="images/20220828.jpg">
+    </li>
+    <li>
       <img src="images/20210815_2.jpg">
     </li>
     <li>
@@ -188,9 +191,6 @@ function myFunction() {
     </li>
     <li>
       <img src="images/people03.jpg">
-    </li>
-    <li>
-      <img src="images/people02.jpg">
     </li>
     <li>
       <img src="images/people01.jpg">
@@ -671,7 +671,7 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: September 10, 2022</p>
+<p align="right">Last modified: October 26, 2022</p>
 
 </div>
 
